feat(domain): add record resource

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -12,6 +12,7 @@ jobs:
           - Account
           - AppleSilicon
           - Baremetal
+          - DomainRecord
           - Instance
           - Iot
           - K8S
@@ -35,6 +36,7 @@ jobs:
           TF_LOG: DEBUG
           TF_ACC: 1
           TF_UPDATE_CASSETTES: false
+          TF_TEST_DOMAIN: scaleway-terraform.com
           SCW_DEBUG: 0
           SCW_ACCESS_KEY: "SCWXXXXXXXXXXXXXFAKE"
           SCW_SECRET_KEY: "11111111-1111-1111-1111-111111111111"
