--- a/scaleway/testdata/vpc-public-gateway-ip-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-ip-basic.cassette.yaml
@@ -12,16 +12,16 @@ interactions:
     url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:21.887673Z","tags":[],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:36.691394Z","tags":[],"address":"163.172.166.18","reverse":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "309"
+      - "310"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:21 GMT
+      - Wed, 04 Aug 2021 14:29:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -31,7 +31,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 78c51fcb-4af4-4f67-a6a0-e4388546525b
+      - 9115f10c-882e-4e19-8374-404dddafdca9
     status: 200 OK
     code: 200
     duration: ""
@@ -41,19 +41,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:21.887673Z","tags":[],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:36.691394Z","tags":[],"address":"163.172.166.18","reverse":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "309"
+      - "310"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:21 GMT
+      - Wed, 04 Aug 2021 14:29:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -63,7 +63,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2954133f-1e0f-4cd3-8e23-65fb145e03ff
+      - 476ca5ce-cb91-4e35-9c9f-d36169217dcb
     status: 200 OK
     code: 200
     duration: ""
@@ -73,19 +73,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:21.887673Z","tags":[],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:36.691394Z","tags":[],"address":"163.172.166.18","reverse":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "309"
+      - "310"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:22 GMT
+      - Wed, 04 Aug 2021 14:29:37 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -95,7 +95,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2bbeda0a-5124-45f4-b23c-e20a91aa5f1c
+      - 5700641f-f769-49d4-94ff-10cff16780dd
     status: 200 OK
     code: 200
     duration: ""
@@ -105,19 +105,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:21.887673Z","tags":[],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:36.691394Z","tags":[],"address":"163.172.166.18","reverse":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "309"
+      - "310"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:22 GMT
+      - Wed, 04 Aug 2021 14:29:37 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -127,7 +127,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e62cd749-d900-436b-8839-8e7c5efed166
+      - a2177a49-43f2-40d8-a652-cf501e04878f
     status: 200 OK
     code: 200
     duration: ""
@@ -137,19 +137,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:21.887673Z","tags":[],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:36.691394Z","tags":[],"address":"163.172.166.18","reverse":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "309"
+      - "310"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:23 GMT
+      - Wed, 04 Aug 2021 14:29:38 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -159,31 +159,31 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - cbd63f2e-b2e6-4ff8-b882-43b66494aefb
+      - 444a1424-7fe9-44ee-9b9e-f0e42228e533
     status: 200 OK
     code: 200
     duration: ""
 - request:
-    body: '{"tags":["tag0","tag1"],"reverse":null,"gateway_id":null}'
+    body: '{"tags":["tag0","tag1"],"reverse":"example.com","gateway_id":null}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: PATCH
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:23.858680Z","tags":["tag0","tag1"],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:38.713093Z","tags":["tag0","tag1"],"address":"163.172.166.18","reverse":"example.com","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "322"
+      - "332"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:23 GMT
+      - Wed, 04 Aug 2021 14:29:38 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -193,7 +193,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a0964fdd-49af-4a21-887b-436564141fb6
+      - c146ec87-f33c-4db6-a938-292c87af50f7
     status: 200 OK
     code: 200
     duration: ""
@@ -203,19 +203,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:23.858680Z","tags":["tag0","tag1"],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:38.713093Z","tags":["tag0","tag1"],"address":"163.172.166.18","reverse":"example.com","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "322"
+      - "332"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:23 GMT
+      - Wed, 04 Aug 2021 14:29:39 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -225,7 +225,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 75442a33-7a96-405e-9e37-35dd445a43e4
+      - efc7a167-3bb1-4968-a806-81ac73290e6c
     status: 200 OK
     code: 200
     duration: ""
@@ -235,19 +235,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:23.858680Z","tags":["tag0","tag1"],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:38.713093Z","tags":["tag0","tag1"],"address":"163.172.166.18","reverse":"example.com","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "322"
+      - "332"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:24 GMT
+      - Wed, 04 Aug 2021 14:29:39 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -257,7 +257,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7e537c94-d4f7-4075-a1ff-3c8e1ce8bd48
+      - 0b67abee-8984-4694-9353-de32023a8a9f
     status: 200 OK
     code: 200
     duration: ""
@@ -267,19 +267,19 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"id":"b7a196e5-2511-457a-8649-026c24f414a2","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-03T09:18:21.887673Z","updated_at":"2021-08-03T09:18:23.858680Z","tags":["tag0","tag1"],"address":"51.15.192.220","reverse":null,"zone":"fr-par-1"}'
+    body: '{"id":"84bf10cd-a105-4975-b150-134c6bb51bc1","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","created_at":"2021-08-04T14:29:36.691394Z","updated_at":"2021-08-04T14:29:38.713093Z","tags":["tag0","tag1"],"address":"163.172.166.18","reverse":"example.com","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "322"
+      - "332"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:24 GMT
+      - Wed, 04 Aug 2021 14:29:39 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -289,7 +289,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 00ac4d0c-6eca-4908-9b62-440821d893dc
+      - 78ea57d8-186a-42ea-b72a-df28c2c832bc
     status: 200 OK
     code: 200
     duration: ""
@@ -299,7 +299,7 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: DELETE
   response:
     body: ""
@@ -309,7 +309,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:25 GMT
+      - Wed, 04 Aug 2021 14:29:40 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -319,7 +319,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 5e08ecf1-4f44-4424-ab29-17361ecffe88
+      - fde27229-2a8c-4eff-b505-ca5a8c4f49ef
     status: 204 No Content
     code: 204
     duration: ""
@@ -329,10 +329,10 @@ interactions:
     headers:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.6; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/b7a196e5-2511-457a-8649-026c24f414a2
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/ips/84bf10cd-a105-4975-b150-134c6bb51bc1
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"ip","resource_id":"b7a196e5-2511-457a-8649-026c24f414a2","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"ip","resource_id":"84bf10cd-a105-4975-b150-134c6bb51bc1","type":"not_found"}'
     headers:
       Content-Length:
       - "123"
@@ -341,7 +341,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 03 Aug 2021 09:18:25 GMT
+      - Wed, 04 Aug 2021 14:29:40 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -351,7 +351,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3381cf8e-ab69-49bf-b20c-b82b03e636e9
+      - 0e2992c4-3d1c-45a6-a536-f648fb66817f
     status: 404 Not Found
     code: 404
     duration: ""
