feat(vpcgw): add gateway network resource (#891)
Co-authored-by: scaleway-bot <github@scaleway.com>

--- a/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
@@ -8,11 +8,12 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
     url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps
     method: POST
   response:
-    body: '{"id":"12de7cec-79ea-44c2-976e-98f3b14e4eba","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-09-21T13:08:19.571667Z","updated_at":"2021-09-21T13:08:19.571667Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"f89a13da-5997-462f-9310-22c67cee9b5d","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-11T14:15:11.713205Z","updated_at":"2021-10-11T14:15:11.713205Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "570"
@@ -21,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:19 GMT
+      - Mon, 11 Oct 2021 14:15:11 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -31,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9f1a0671-dc11-4aea-a117-e322cdad88f7
+      - fecc0e03-ca20-498d-9132-39b264bd80e2
     status: 200 OK
     code: 200
     duration: ""
@@ -40,11 +41,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/12de7cec-79ea-44c2-976e-98f3b14e4eba
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/f89a13da-5997-462f-9310-22c67cee9b5d
     method: GET
   response:
-    body: '{"id":"12de7cec-79ea-44c2-976e-98f3b14e4eba","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-09-21T13:08:19.571667Z","updated_at":"2021-09-21T13:08:19.571667Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"f89a13da-5997-462f-9310-22c67cee9b5d","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-11T14:15:11.713205Z","updated_at":"2021-10-11T14:15:11.713205Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "570"
@@ -53,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:19 GMT
+      - Mon, 11 Oct 2021 14:15:11 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -63,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 89ca8e02-ef17-4dd5-97d8-d23f4345190a
+      - aaf2e959-34e6-4af7-8ce8-1b9d39779ffd
     status: 200 OK
     code: 200
     duration: ""
@@ -72,11 +74,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/12de7cec-79ea-44c2-976e-98f3b14e4eba
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/f89a13da-5997-462f-9310-22c67cee9b5d
     method: GET
   response:
-    body: '{"id":"12de7cec-79ea-44c2-976e-98f3b14e4eba","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-09-21T13:08:19.571667Z","updated_at":"2021-09-21T13:08:19.571667Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"f89a13da-5997-462f-9310-22c67cee9b5d","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-11T14:15:11.713205Z","updated_at":"2021-10-11T14:15:11.713205Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "570"
@@ -85,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:19 GMT
+      - Mon, 11 Oct 2021 14:15:11 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -95,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0ea115ec-b62e-4f31-bb6a-490b8e38cb5e
+      - 1fb9746c-4616-4fce-add7-7069ab47d9db
     status: 200 OK
     code: 200
     duration: ""
@@ -104,11 +107,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/12de7cec-79ea-44c2-976e-98f3b14e4eba
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/f89a13da-5997-462f-9310-22c67cee9b5d
     method: GET
   response:
-    body: '{"id":"12de7cec-79ea-44c2-976e-98f3b14e4eba","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-09-21T13:08:19.571667Z","updated_at":"2021-09-21T13:08:19.571667Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"f89a13da-5997-462f-9310-22c67cee9b5d","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-11T14:15:11.713205Z","updated_at":"2021-10-11T14:15:11.713205Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":false,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":false,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "570"
@@ -117,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:20 GMT
+      - Mon, 11 Oct 2021 14:15:12 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -127,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f000fe00-fb3e-441f-a687-f40e8e916c37
+      - 1db8f0ee-bf51-4c1c-9014-9886fc9a233a
     status: 200 OK
     code: 200
     duration: ""
@@ -136,8 +140,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/12de7cec-79ea-44c2-976e-98f3b14e4eba
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/f89a13da-5997-462f-9310-22c67cee9b5d
     method: DELETE
   response:
     body: ""
@@ -147,7 +152,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:20 GMT
+      - Mon, 11 Oct 2021 14:15:13 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -157,7 +162,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - dfd77512-8500-4831-ac99-a4c1c9b3ce81
+      - f7d6c032-f8c7-4b7f-892e-0955c7046205
     status: 204 No Content
     code: 204
     duration: ""
@@ -166,11 +171,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/12de7cec-79ea-44c2-976e-98f3b14e4eba
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1beta1/zones/fr-par-1/dhcps/f89a13da-5997-462f-9310-22c67cee9b5d
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"12de7cec-79ea-44c2-976e-98f3b14e4eba","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"f89a13da-5997-462f-9310-22c67cee9b5d","type":"not_found"}'
     headers:
       Content-Length:
       - "125"
@@ -179,7 +185,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 21 Sep 2021 13:08:20 GMT
+      - Mon, 11 Oct 2021 14:15:13 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -189,7 +195,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 18f3f4fe-adb2-4eab-957c-797d5888c99b
+      - 47ad8cd5-2870-4f74-8309-91173ce40bdf
     status: 404 Not Found
     code: 404
     duration: ""
