fix(rdb): populate waiting and retry

--- a/scaleway/testdata/rdb-user-basic.cassette.yaml
+++ b/scaleway/testdata/rdb-user-basic.cassette.yaml
@@ -1130,7 +1130,7 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"name":"foo","password":"R34lP4sSw#Rd","is_admin":true}'
     form: {}
     headers:
       User-Agent:
