--- a/scaleway/testdata/data-source-rdb-privilege-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-rdb-privilege-basic.cassette.yaml
@@ -2820,7 +2820,7 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: '{"name":"foo"}'
+    body: ""
     form: {}
     headers:
       User-Agent:
